--- a/DOM/style.css
+++ b/DOM/style.css
@@ -1,4 +1,4 @@
-.heading{
+/* .heading{
     color: blue;
 }
 
@@ -10,4 +10,10 @@ button{
     padding: 10px;
     border-radius: 5px;
     font-size: 16px;
+} */
+
+#box{
+    height: 100px;
+    width: 100px;
+    background-color: aliceblue;
 }
